@@ -1,3 +1,6 @@
+2013-02-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Add --define/--var/-D option for run-specific variables.
+
 2013-02-11 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
 	* Reversed actions can be configured
 	* Fix parallelism regression.
